# April

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  intervals.rs  kmers.rs  main.rs  reference.rs
test_dataset/: PP141354.1.fasta
