[package]
name = "april"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.3", features = ["derive", "cargo"]}
clap-verbosity-flag = "2.1.1"
needletail = "0.5.1"
